Fix header buttons on mobile view

--- a/packages/not-alone-ui/src/not-alone/not-alone.scss
+++ b/packages/not-alone-ui/src/not-alone/not-alone.scss
@@ -14,15 +14,21 @@
   font-family: Arial, Helvetica, sans-serif;
 
   .information {
-    $font-size: 4vh;
-    $line-height: 1.4;
+    $padding: 0.5vh;
+    $height: $header-height - $padding * 2;
     color: antiquewhite;
-    font-size: $font-size;
-    line-height: $line-height;
-    padding: ($header-height - $font-size * $line-height) / 2;
+    font-size: 4vh;
+    height: $height;
+    line-height: $height;
+    padding: $padding;
     text-align: center;
     margin: 0;
     background: rgba(255, 255, 255, 0.2);
+
+    button {
+      padding: 0.5vh;
+      border-radius: 0.5vh;
+    }
   }
 
   > .phase {
